--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,66 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="867da0">  <td>23/09/21 17:23:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assertionsHard.atAssertion()[pri:0, instance:WebElementStatements.PKG.assertionsHard@1de76cc7]">atAssertion</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="867da0">  <td>23/09/21 17:23:54</td>   <td>3017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assertionsHard.atAssertionSoft()[pri:0, instance:WebElementStatements.PKG.assertionsHard@1de76cc7]">atAssertionSoft</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>23/09/21 17:26:22</td>   <td>151439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="brokenLink.atBrokenLink()[pri:0, instance:Scenarios.brokenLink@2dc54ad4]">atBrokenLink</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="8e6db8">  <td>23/09/21 17:24:14</td>   <td>23630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="three_dompropertyColor3.atColorChange()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.three_dompropertyColor3@1e1a0406]">atColorChange</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>23/09/21 17:26:09</td>   <td>138906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="cookies.atCookies()[pri:0, instance:WebElementStatements.PKG.cookies@47d9a273]">atCookies</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="aa8588">  <td>23/09/21 17:26:05</td>   <td>134620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="six_DynScpt_InnerTextofPage.atDisplayInnerTextoFPage()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.six_DynScpt_InnerTextofPage@26e356f0]">atDisplayInnerTextoFPage</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="7cdc6d">  <td>23/09/21 17:24:28</td>   <td>37914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dragAndDropActions.atDragNDrop()[pri:0, instance:WebElementStatements.PKG.dragAndDropActions@12aba8be]">atDragNDrop</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="a365b8">  <td>23/09/21 17:26:14</td>   <td>143857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="duplicateElement.atDuplicate()[pri:0, instance:Scenarios.duplicateElement@27f981c6]">atDuplicate</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="a970b0">  <td>23/09/21 17:27:10</td>   <td>199713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dynamicURL.atHandleDynamicURL()[pri:0, instance:WebElementStatements.PKG.dynamicURL@4c1909a3]">atHandleDynamicURL</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="63bcb1">  <td>23/09/21 17:25:06</td>   <td>75359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="windowScrollBy.atScrollBy()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.windowScrollBy@27462a88]">atScrollBy</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="71b7a8">  <td>23/09/21 17:27:05</td>   <td>194719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="seven_DynaScpt_ScrollPage.atScrollingFeature()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.seven_DynaScpt_ScrollPage@4b0d79fc]">atScrollingFeature</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="8872e1">  <td>23/09/21 17:26:15</td>   <td>144972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="getTextnGetAttribute.atTest()[pri:0, instance:WebElementStatements.PKG.getTextnGetAttribute@1b11171f]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="8b959e">  <td>23/09/21 17:24:01</td>   <td>10462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="autoSuggestive_DynamicDropDown.atTest()[pri:0, instance:WebElementStatements.PKG.autoSuggestive_DynamicDropDown@437da279]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>23/09/21 17:25:35</td>   <td>104343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="uploadFileDownload.atTest()[pri:0, instance:WebElementStatements.PKG.uploadFileDownload@61001b64]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>23/09/21 17:25:30</td>   <td>99264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="one_allAertsRuntime.atTest()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.one_allAertsRuntime@201a4587]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>23/09/21 17:26:02</td>   <td>131515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="linkClickbyLinkText.atTest()[pri:0, instance:Scenarios.linkClickbyLinkText@54a7079e]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="bb9485">  <td>23/09/21 17:24:51</td>   <td>60687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dynamicElement.atTest()[pri:0, instance:WebElementStatements.PKG.dynamicElement@6253c26]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="b2e768">  <td>23/09/21 17:25:10</td>   <td>79508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="downLoad.atTest()[pri:0, instance:WebElementStatements.PKG.downLoad@82de64a]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="69759b">  <td>23/09/21 17:25:23</td>   <td>92593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="eight_DynScpt_InputValue.atTest()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.eight_DynScpt_InputValue@51e69659]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="70f8a6">  <td>23/09/21 17:27:12</td>   <td>201481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="five_dynamicScpt_getURLtTile.atTest()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.five_dynamicScpt_getURLtTile@428640fa]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>23/09/21 17:24:19</td>   <td>28262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dropDownStattic.atTest()[pri:0, instance:WebElementStatements.PKG.dropDownStattic@3cebbb30]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="9161a8">  <td>23/09/21 17:26:18</td>   <td>147274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="getAllLinks.atTest()[pri:0, instance:Scenarios.getAllLinks@1151e434]">atTest</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>23/09/21 17:24:54</td>   <td>63346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="mouseHoverAction.atTest11()[pri:0, instance:WebElementStatements.PKG.mouseHoverAction@49049a04]">atTest11</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="856572">  <td>23/09/21 17:25:21</td>   <td>90117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assertionSoftVerify.atVerifySoftAssertion()[pri:0, instance:WebElementStatements.PKG.assertionSoftVerify@659499f1]">atVerifySoftAssertion</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="d07cbb">  <td>23/09/21 17:27:02</td>   <td>191856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="randomClickonLink.atWait()[pri:0, instance:Scenarios.randomClickonLink@55634720]">atWait</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="ed7b7c">  <td>23/09/21 17:25:40</td>   <td>109065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="wait.atWait()[pri:0, instance:WebElementStatements.PKG.wait@4310d43]">atWait</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>23/09/21 17:25:25</td>   <td>94759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="two_DomStatements2.atclickHandle()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.two_DomStatements2@47e2e487]">atclickHandle</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="abaca9">  <td>23/09/21 17:26:57</td>   <td>186852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="clickHandleAnotherWay.atclickHandle()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.clickHandleAnotherWay@4659191b]">atclickHandle</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="a6b398">  <td>23/09/21 17:23:56</td>   <td>5578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="four_domPropertiesURLtIle$clickHandle.atinnerHTMLtext()[pri:0, instance:CompName.RacJS.JavaScriptFrmaework.four_domPropertiesURLtIle$clickHandle@23c30a20]">atinnerHTMLtext</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="70f7aa">  <td>23/09/21 17:25:03</td>   <td>72026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="checkBoxes.checkboxvalidation()[pri:0, instance:WebElementStatements.PKG.checkBoxes@71a8adcf]">checkboxvalidation</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
-<tr bgcolor="7e8a9e">  <td>23/09/21 17:26:12</td>   <td>141932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dynamicDropDown.dynamicDropDownHandling()[pri:0, instance:WebElementStatements.PKG.dynamicDropDown@4b8ee4de]">dynamicDropDownHandling</td> 
-  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="947bc5">  <td>23/09/28 08:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="webTableTest.Table()[pri:0, instance:Scenarios.webTableTest@5d0a1059]">Table</td> 
+  <td>main@151593342</td>   <td></td> </tr>
 </table>
